// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceholderWidget component should display the integration name if the widget is for an HTTP integration 1`] = `
<Card
  className="component placeholder wrapper transparent draggable"
  tag="div"
>
  <CardBody
    className="clearfix"
    tag="div"
  >
    <span
      className="tools"
    >
      <i
        className="material-icons text-danger clickable"
        onClick={[Function]}
      >
        close
      </i>
    </span>
    <h5
      className="title"
    >
      Widget for my little integration http data
    </h5>
  </CardBody>
</Card>
`;

exports[`PlaceholderWidget component should display the integration type if the widget is not for an HTTP integration 1`] = `
<Card
  className="component placeholder wrapper transparent draggable"
  tag="div"
>
  <CardBody
    className="clearfix"
    tag="div"
  >
    <span
      className="tools"
    >
      <i
        className="material-icons text-danger clickable"
        onClick={[Function]}
      >
        close
      </i>
    </span>
    <h5
      className="title"
    >
      Widget for Shopify data
    </h5>
  </CardBody>
</Card>
`;
